Fix collapse behavior of CPU usage per core

The collapse behavior of CPU usage per core is incorrect.

For an example, when space is insufficient, "Core 1 Total Usage 1.0%" will collapse into "Usage 1.0%", which is hard to distinguish among different cores.

Therefore, we should make it collapses into core No. (such as "Core 1").

BUG: 482719